package com.hdfc.rcp.logger.utils;

public class EncryptionService {
    public void encrypt(){
        System.out.println("encrypt");
    }
}
