package com.hdfc.rcp.logger.utils;

public class MaskingService {
    public void mask(){
        System.out.println("Mask");
    }
}
