package com.hdfc.rcp.logger.utils;

public class PublisherService {
    public void publish(){
        System.out.println("Publish");
    }
}
